# python-binaries

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
hello_world/: hello.py
