[project]
name = "python-binaries"
version = "0.1.0"
description = "python binaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.5", "pyinstaller>=6.13.0"]


[tool.uv]
dev-dependencies = ["pre-commit>=3.8.0", "ruff>=0.6.7", "jupyter>=1.1.1"]


[tool.ruff]
cache-dir = "/workspaces/.cache/ruff"
