[project]
name = "python-binaries"
version = "0.1.0"
description = "python binaries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.5", "typer>=0.15.2"]

[tool.uv]
dev-dependencies = ["ruff>=0.6.7", "pyinstaller>=6.13.0"]


[tool.ruff]
cache-dir = "/home.vscode/.cache/ruff"
